added media queries and small changes

--- a/btssio.html
+++ b/btssio.html
@@ -117,13 +117,12 @@
         </div>
 
         <div class="epreuve">
-            <div class="epreuveE5">
+            <div>
                 <h1>Epreuve E5</h1>
                 <a href="files/8-1-BTSSIO-2025-Annexe8-1-EpreuveE5-Tableaudesynthese.pdf" target="_blank">Tableau de Synthèse</a>
             </div>
-            <div class="epreuveE6">
+            <div>
                 <h1>Epreuve E6</h1>
-                <!-- <a href="" target="_blank">Page de Garde</a> -->
                 <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
                 <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
             </div>
