--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </nav>
 
         <header id="intro">
-            <div>
+            <div class="title">
                 <h1>Gauthier Dubois</h1>
-                <h3>Développeur Informatique</h3>
+                <h3>Développeur logiciel</h3>
             </div>
             <a href="#profil"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
         </header>
@@ -36,6 +36,7 @@
         <section id="profil">
             <h2>À propos de moi</h2>
             <div class="a-propos">
+                <img src="images/photoGauthier.webp" alt="Photo Gauthier" height="400px">
                 <article>
                     <p>
                         Je suis actuellement étudiant en 2ème année de BTS SIO (Services Informatiques aux
@@ -49,10 +50,12 @@
                         Informatiques et Systèmes Communicants. Puis, ayant une appétence pour les 
                         langages de programmation, j'ai continué mon parcours vers le BTS SIO option SLAM. 
                     </p>
-                    <a href="files/CV_EFREI.pdf" target="_blank" class="button-link">Voir mon CV</a>
-                    <a href="btssio.html" class="button-link">BTS SIO</a>
+                    <div>
+                        <a href="files/CV_EFREI.pdf" target="_blank">Voir mon CV</a>
+                        <a href="btssio.html">BTS SIO</a>
+                        <a href="veilleTech.html">VEILLE TECHNOLOGIE</a>
+                    </div>
                 </article>
-                <img src="images/photoGauthier.webp" alt="Photo Gauthier" style="height: 400px;">
             </div>
             <h2>Mes Compétences</h2>
             <div class="competence">
@@ -107,6 +110,7 @@
                         <div>
                             <img src="images/logo/csharpLogo.webp" alt="Langage C# logo" height="60px">
                             <img src="images/logo/cppLogo.webp" alt="Langage C++ logo" height="60px">
+                            <img src="images/logo/pythonLogo.png" alt="Python logo" height="60px">
                         </div>
                     </div>
                 </div>
@@ -119,7 +123,6 @@
                         <h3>Blender</h3>
                         <img 
                             id="blender-img" 
-                            height="300px"
                             src="images/logo/blenderLogo.webp" 
                             alt="Blender Logo"
                             onmouseover="this.src='images/blenderShowcase.webp';"
@@ -132,7 +135,7 @@
                     </article>
                     <article>
                         <h3>Dessin</h3>
-                        <img src="images/sketch2018_KimJungGi.png" height="500px">
+                        <img src="images/sketch2018_KimJungGi.png">
                         <p>Référence : 2018 Sketch Collection - Kim Jung Gi</p>
                     </article>
                 </div>
@@ -218,14 +221,14 @@
                     <aside>
                         <h3>Gestion de Stock</h3>
                         <p>
-                            Projet individuelle sur la Gestion De Stock programmé en Java et en utilisant 
+                            Projet de groupe sur la Gestion De Stock programmé en Java et en utilisant 
                             l'extension bibliothèque Connector MySQL.
                         </p>
                         <a href="https://github.com/Gautk1ng/gestion-de-stock" target="_blank"><i class="fa-brands fa-github fa-1x"></i> Source Code</a>
                     </aside>
                     <img src="images/screenshot_gestiondestock.png" alt="Gestion de Stock" height="200px">
                 </div>
-                <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank" class="workProject">Tableau de Synthèse</a>
+                <a href="files/8-1-BTSSIO-2025-Annexe8-1-EpreuveE5-Tableaudesynthese.pdf" target="_blank" class="workProject">Tableau de Synthèse</a>
             </div>
             <h2>Mes Certifications</h2>
             <div class="boxCollection">
