--- a/veilleTech.html
+++ b/veilleTech.html
@@ -22,56 +22,44 @@
             <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="linkedin" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         </div>
     </nav>
-    <div class="boxTextArea">
-        <p>
-            Une veille technologique est un processus systématique de collecte, 
-            de surveillance et d'analyse des informations sur les technologies émergentes, 
-            les innovations et les tendances dans un domaine spécifique. 
-            Elle permet aux entreprises et aux professionnels de rester informés des dernières 
-            avancées technologiques, d'identifier les opportunités et les menaces potentielles, 
-            et de prendre des décisions éclairées pour maintenir leur compétitivité.
-        </p>
-        <p>
-            La veille technologique peut inclure la surveillance de brevets, 
-            de publications scientifiques, de conférences, de blogs spécialisés, 
-            de réseaux sociaux et d'autres sources d'information pertinentes. 
-            Elle est souvent utilisée pour anticiper les évolutions du marché, 
-            pour innover et pour adapter les stratégies de développement.
-        </p>
-        <p>
-            En ce qui me concerne j'oriente ma veille technologique sur l'évolution des 
-            langages de programmation dans les domaines du développement logiciel et l'ingénierie 3D.
-            Pour cela, je me documente sur le net en lisant des articles et sur YouTube.
-        </p>
-    </div>
-    <h2>YouTube</h2>
-    <div class="flexBox">
-        <a href="https://www.youtube.com/@techlinked" target="_blank">
-            <img src="images/logo/techLinkedProfile.jpg" alt="Profile Techlinked" style="border-radius: 50%; width: 100px;">
-            <h3>TechLinked</h3>
-        </a>
-        <a href="https://www.youtube.com/@Fireship" target="_blank">
-            <img src="images/logo/fireshipProfile.jpg" alt="Profile Fireship" style="border-radius: 50%; width: 100px;">
-            <h3>Fireship</h3>
-        </a>
-    </div>
-    <h2>Articles</h2>
-    <div class="flexBox">
-        <article>
-            <img src="images/logo/lemondeLogo.png" alt="Le Monde Logo" width="300px">
-            <div>
-                <h3>Le Monde - Artificial Intelligence</h3>
-                <a href="https://www.lemonde.fr/en/artificial-intelligence/" target="_blank"><i class="fa-solid fa-globe fa-1x"></i> Site Web</a>
-            </div>
-        </article>
-        <article>
-            <img src="images/logo/openaiLogo.png" alt="OpenAI Logo" width="300px">
-            <div>
-                <h3>OpenAI</h3>
-                <a href="https://openai.com/news/" target="_blank"><i class="fa-solid fa-globe fa-1x"></i> Site Web</a>
-            </div>
-        </article>
-    </div>
+    <section id="listVeille">
+        <div class="boxTextArea">
+            <p>
+                Une veille technologique est un processus systématique de collecte, 
+                de surveillance et d'analyse des informations sur les technologies émergentes, 
+                les innovations et les tendances dans un domaine spécifique. 
+                Elle permet aux entreprises et aux professionnels de rester informés des dernières 
+                avancées technologiques, d'identifier les opportunités et les menaces potentielles, 
+                et de prendre des décisions éclairées pour maintenir leur compétitivité.
+            </p>
+            <p>
+                La veille technologique peut inclure la surveillance de brevets, 
+                de publications scientifiques, de conférences, de blogs spécialisés, 
+                de réseaux sociaux et d'autres sources d'information pertinentes. 
+                Elle est souvent utilisée pour anticiper les évolutions du marché, 
+                pour innover et pour adapter les stratégies de développement.
+            </p>
+            <p>
+                En ce qui me concerne j'oriente ma veille technologique sur l'évolution des 
+                langages de programmation dans les domaines du développement logiciel et l'ingénierie 3D.
+                Pour cela, je me documente sur le net en lisant des articles et sur YouTube.
+            </p>
+        </div>
+        <div class="flexBox">
+            <a href="https://trends.stackoverflow.co" target="_blank">
+                <img src="images/logo/stackoverflowLogo.png" width="300px">
+                <h3>Stack Overflow Tag Trends</h3>
+            </a>
+            <a href="https://www.jetbrains.com/lp/devecosystem-2024/" target="_blank">
+                <img src="images/logo/jetbrainsLogo.png" width="300px">
+                <h3>Software Developers Statistics</h3>
+            </a>
+            <a href="https://openai.com/chatgpt/overview/" target="_blank">
+                <img src="images/logo/openaiLogo.png" width="300px">
+                <h3>ChatGPT</h3>
+            </a>
+        </div>
+    </section>
     <hr>
     <footer style="text-align: center;">
         <p>&copy; 2025 - Gauthier Dubois</p>
