Adding and updating CV

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         langages de programmation, j'ai continué mon parcours vers le BTS SIO option SLAM. 
                     </p>
                     <div>
-                        <a href="files/CV_EFREI.pdf" target="_blank">Voir mon CV</a>
+                        <a href="files/CV Gauthier Dubois-ESIEE.pdf" target="_blank">Voir mon CV</a>
                         <a href="btssio.html">BTS SIO</a>
                         <a href="veilleTech.html">VEILLE TECHNOLOGIE</a>
                     </div>
@@ -253,7 +253,7 @@
                         N'hésitez pas à me contacter, je serais ravi de discuter avec vous 
                         de la manière dont je pourrais apporter de la valeur à votre entreprise.
                     </p>
-                    <a href="files/CV_EFREI.pdf" target="_blank" class="button-link">Voir mon CV</a>
+                    <a href="files/CV Gauthier Dubois-ESIEE.pdf" target="_blank" class="button-link">Voir mon CV</a>
                 </div>
     
                 <div class="contact-list">
