update border bts option

--- a/btssio.html
+++ b/btssio.html
@@ -58,7 +58,7 @@
             </p>
         </div>
         <div class="box-option">
-            <div>
+            <div class="optChosen">
                 <h1>Option SLAM</h1>
                 <h2>Solutions Logicielles et Applications Métiers</h2>
                 <p>
